--- a/style.css
+++ b/style.css
@@ -1,10 +1,28 @@
 /* Format for applying styling rules */
 [selector] {
   [property]: [value];
+  
 }
 
 /* Global Styles go here */
 body {
   background: black;
   color: black;
+
+}
+
+div.relative {
+  position: relative;
+  width: 400px;
+  height: 200px;
+  border: 3px solid #73AD21;
+} 
+
+div.absolute {
+  position: absolute;
+  top: 80px;
+  right: 0;
+  width: 200px;
+  height: 100px;
+  border: 3px solid #73AD21;
 }
